fixed colors, height/spacing of front page div

--- a/my_hebrew_dates/static/css/project.css
+++ b/my_hebrew_dates/static/css/project.css
@@ -16,15 +16,9 @@
 /* Colors for the site */
 :root {
   --szColorBlack: #000;
-  /* main background color */
   --szColorWhite: #ffffff;
-  /* main text color */
-  --szColorAccent1: #ff813f;
-  /*#96ff88 highlight color 20501a*/
-  --szColorAccent2: #ff823f55;
-  /*#96ff88 highlight color 20501a*/
-  --szColorAccent3: #88ddff;
-  /*#96ff88 highlight color 2e6b273c    */
+  --szColorAccent1: #b20245;
+  --szColorAccent2: #b2024572;
   --bs-body-color: var(--szColorBlack);
 }
 
@@ -198,6 +192,13 @@ hr::before {
   border-radius: 0.375rem;
   color: var(--szColorWhite) !important;
   margin: 5px auto;
+  padding-left: 20px;
+  padding-right: 20px;
+  height: fit-content;
+}
+
+.szCenter {
+  justify-content: center !important;
 }
 
 div.alert {
@@ -243,7 +244,6 @@ div.alert {
     /* makes div same height */
     flex-wrap: wrap;
     flex-direction: column;
-    min-height: 40vh;
     width: 30% !important;
   }
 }
@@ -369,6 +369,16 @@ input[type='radio'] {
   /* makes cards same height */
   flex-wrap: wrap;
   height: 30vh;
+}
+
+@media (max-width: 992px) {
+  .szcard {
+    height: fit-content !important;
+  }
+}
+
+.szCardWords {
+  vertical-align: middle;
 }
 
 .szcard-body {
